// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shopping Card  debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h2>
    Product Card
  </h2>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Shopping Card debe mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h2>
    Product Card
  </h2>
</div>
`;
